--- a/src/CSS/CloseSpeechbubble.css
+++ b/src/CSS/CloseSpeechbubble.css
@@ -8,7 +8,7 @@
   width: 5vw;
   height: 5vw;
   position: relative;
-  left: -5vw;
+  left: -5.2vw;
   top: 0.5vw;
   grid-area: close;
 }
