--- a/src/CSS/SubtractionPanel.css
+++ b/src/CSS/SubtractionPanel.css
@@ -103,7 +103,6 @@
 }
 
 .analogy .panel {
-  padding: 2vw 0 0 0 !important;
   width: 25vw;
   height: 17vw;
   border-radius: 5%;
