--- a/src/CSS/Welcome.css
+++ b/src/CSS/Welcome.css
@@ -32,7 +32,7 @@
 
 .welcome .bubble {
   position: relative;
-  padding: 3.5vw 3vw 3vw 3vw;
+  padding: 5.5vw 3vw 1vw 3vw;
   width: 35vw;
   height: 15vw;
   border-radius: 12px;
